translation-tool/inputs/source_meta/objects/HSvc_AccountTransactionCodeMaster__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Swap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Swap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_ActiveFormula__c</fullName>
        <formula>AND(
  HSvc_Expiry_Date__c &gt;= TODAY(),
  HSvc_Effective_Date__c &lt;= TODAY()

)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_AvailableOnSelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available On Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_AvailableToUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available to User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_CloseCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Description__c</fullName>
        <label>Transaction Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_TransactionCode__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ApplicableForCountry__c</fullName>
        <label>Applicable For Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                    <label>Colombia</label>
                </value>
                <value>
                    <fullName>PA</fullName>
                    <label>Panama</label>
                </value>
                <value>
                    <fullName>PE</fullName>
                    <label>Peru</label>
                </value>
                <value>
                    <fullName>EC</fullName>
                    <label>Ecuador</label>
                </value>
                <value>
                    <fullName>CL</fullName>
                    <label>Chile</label>
                </value>
				<value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_BusinessModel__c</fullName>
        <label>Business Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>ConsumerVAR</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_LabelPanama__c</fullName>
        <label>Label(Panama)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Number_Of_Transactions_Allowed__c</fullName>
        <label>Number Of Transactions Allowed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hsvc_Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Label_Formula__c</fullName>
        <description>This field returns the Account transaction code based on the user language</description>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK(Label_es_CO__c ), Hsvc_Label__c ,Label_es_CO__c) ,&apos;es_PA&apos;, IF(ISBLANK(Hsvc_LabelPanama__c ), Hsvc_Label__c ,Hsvc_LabelPanama__c) ,&apos;es_PE&apos;, IF(ISBLANK(Label_esPE__c ), Hsvc_Label__c ,Label_esPE__c) ,&apos;es_EC&apos;, IF(ISBLANK(Label_esEC__c ), Hsvc_Label__c ,Label_esEC__c) ,&apos;es_CL&apos;, IF(ISBLANK(Label_esEC__c ), Hsvc_Label__c ,Label_esEC__c) ,&apos;es_AR&apos;, IF(ISBLANK(Label_esAR__c ), Hsvc_Label__c ,Label_esAR__c) , Hsvc_Label__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Label_esAR__c</fullName>
        <label>Label(Argentina)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_esCL__c</fullName>
        <label>Label(Chile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_esEC__c</fullName>
        <label>Label(Ecuador)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_esPE__c</fullName>
        <label>Label(Peru)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_es_CO__c</fullName>
        <label>Label(Colombia)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_pt_PT__c</fullName>
        <description>Label in Portuguese</description>
        <label>Label(Portuguese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfilesNotApplicable__c</fullName>
        <label>Profiles Not Applicable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hughes - Brazil - B2C - CSM</fullName>
                </value>
                <value>
                    <fullName>Hughes - Brazil - B2C - CSR</fullName>
                </value>
                <value>
                    <fullName>INT Admin</fullName>
                </value>
                <value>
                    <fullName>INT Admin Plus</fullName>
                </value>
                <value>
                    <fullName>Hughes - CSM</fullName>
                </value>
                <value>
                    <fullName>Hughes - CSM Enterprise</fullName>
                </value>
                <value>
                    <fullName>Hughes - CSM Consumer</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Service Provider - CSR</fullName>
                </value>
                <value>
                    <fullName>Service Provider Admin ( Customer Community Plus Login)</fullName>
                </value>
                <value>
                    <fullName>Yahsat Admin</fullName>
                </value>
                <value>
                    <fullName>Service Provider - Read only</fullName>
                </value>
                <value>
                    <fullName>SP Distributor - Admin</fullName>
                </value>
                <value>
                    <fullName>SP Distributor - CSR</fullName>
                </value>
                <value>
                    <fullName>SP Distributor - Read only</fullName>
                </value>
                <value>
                    <fullName>SPCustomer</fullName>
                </value>
                <value>
                    <fullName>SPEnterprise</fullName>
                </value>
                <value>
                    <fullName>Yahsat - Read Only</fullName>
                </value>
                <value>
                    <fullName>Tier 3 CSR</fullName>
                </value>
                <value>
                    <fullName>Yahsat CSR</fullName>
                </value>
                <value>
                    <fullName>INT CSR</fullName>
                </value>
                <value>
                    <fullName>INT CSM</fullName>
                </value>
                <value>
                    <fullName>VAR Partner Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason_Codes_Not_Applicable__c</fullName>
        <inlineHelpText>Choose one or more status reason codes for which a particular transaction code mustn&apos;t be visible</inlineHelpText>
        <label>Status Reason Codes Not Applicable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A01</fullName>
                    <label>A01 - Reactivated account</label>
                </value>
                <value>
                    <fullName>A02</fullName>
                    <isActive>false</isActive>
                    <label>A02</label>
                </value>
                <value>
                    <fullName>A03</fullName>
                    <isActive>false</isActive>
                    <label>A03</label>
                </value>
                <value>
                    <fullName>A04</fullName>
                    <isActive>false</isActive>
                    <label>A04</label>
                </value>
                <value>
                    <fullName>A05</fullName>
                    <isActive>false</isActive>
                    <label>A05</label>
                </value>
                <value>
                    <fullName>A06</fullName>
                    <isActive>false</isActive>
                    <label>A06</label>
                </value>
                <value>
                    <fullName>A07</fullName>
                    <isActive>false</isActive>
                    <label>A07</label>
                </value>
                <value>
                    <fullName>A08</fullName>
                    <label>A08 - Billing Unlock Reactivation</label>
                </value>
                <value>
                    <fullName>A100</fullName>
                    <isActive>false</isActive>
                    <label>A100</label>
                </value>
                <value>
                    <fullName>A10</fullName>
                    <label>A10 - Service Account Activation</label>
                </value>
                <value>
                    <fullName>A152</fullName>
                    <isActive>false</isActive>
                    <label>A152</label>
                </value>
                <value>
                    <fullName>C01</fullName>
                    <isActive>false</isActive>
                    <label>C01</label>
                </value>
                <value>
                    <fullName>C02</fullName>
                    <isActive>false</isActive>
                    <label>C02</label>
                </value>
                <value>
                    <fullName>C03</fullName>
                    <isActive>false</isActive>
                    <label>C03</label>
                </value>
                <value>
                    <fullName>C04</fullName>
                    <isActive>false</isActive>
                    <label>C04</label>
                </value>
                <value>
                    <fullName>C05</fullName>
                    <isActive>false</isActive>
                    <label>C05</label>
                </value>
                <value>
                    <fullName>C06</fullName>
                    <isActive>false</isActive>
                    <label>C06</label>
                </value>
                <value>
                    <fullName>C07</fullName>
                    <isActive>false</isActive>
                    <label>C07</label>
                </value>
                <value>
                    <fullName>C08</fullName>
                    <isActive>false</isActive>
                    <label>C08</label>
                </value>
                <value>
                    <fullName>C09</fullName>
                    <label>C09 - Canceled: 09 No Reason Given</label>
                </value>
                <value>
                    <fullName>C10</fullName>
                    <isActive>false</isActive>
                    <label>C10</label>
                </value>
                <value>
                    <fullName>C11</fullName>
                    <isActive>false</isActive>
                    <label>C11</label>
                </value>
                <value>
                    <fullName>C12</fullName>
                    <isActive>false</isActive>
                    <label>C12</label>
                </value>
                <value>
                    <fullName>C13</fullName>
                    <isActive>false</isActive>
                    <label>C13</label>
                </value>
                <value>
                    <fullName>C14</fullName>
                    <label>C14 - Canceled: Ku to Ka Upgrade On Same SAN</label>
                </value>
                <value>
                    <fullName>C15</fullName>
                    <isActive>false</isActive>
                    <label>C15</label>
                </value>
                <value>
                    <fullName>C150</fullName>
                    <isActive>false</isActive>
                    <label>C150</label>
                </value>
                <value>
                    <fullName>C151</fullName>
                    <isActive>false</isActive>
                    <label>C151</label>
                </value>
                <value>
                    <fullName>C16</fullName>
                    <isActive>false</isActive>
                    <label>C16</label>
                </value>
                <value>
                    <fullName>C17</fullName>
                    <isActive>false</isActive>
                    <label>C17</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Transaction Code Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hsvc_Label__c</columns>
        <columns>HSvc_TransactionCode__c</columns>
        <columns>HSvc_CloseCase__c</columns>
        <columns>HSvc_AvailableToUser__c</columns>
        <columns>HSvc_ActiveFormula__c</columns>
        <columns>Hsvc_BusinessModel__c</columns>
        <columns>Status_Reason_Codes_Not_Applicable__c</columns>
        <columns>Hsvc_ApplicableForCountry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Hsvc_ApplicableForCountry__c</columns>
        <columns>Hsvc_BusinessModel__c</columns>
        <columns>HSvc_TransactionCode__c</columns>
        <columns>HSvc_Description__c</columns>
        <columns>HSvc_CloseCase__c</columns>
        <columns>Hsvc_Label__c</columns>
        <columns>Label_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Transactions Code masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetInThePast</fullName>
        <active>true</active>
        <errorConditionFormula>OR( HSvc_Expiry_Date__c &lt; TODAY(), HSvc_Expiry_Date__c&lt; HSvc_Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>HSvc_Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>